--- a/src/pages/modal-login/modal-login.html
+++ b/src/pages/modal-login/modal-login.html
@@ -1,40 +1,42 @@
-<!--
-  Generated template for the ModalLoginPage page.
+<ion-content padding no-bounce>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Log ind</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-  <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
-    <ion-row>
-      <ion-col>
-        <ion-list inset>
-          <ion-item>
-            <ion-input placeholder="Email" name="username" id="loginField" type="email" required [(ngModel)]="username" #email></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-input placeholder="Password" name="password" id="passwordField" type="password" required [(ngModel)]="password"></ion-input>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <div *ngIf="error" class="alert alert-danger">{{errorMessage}}</div>
-        <button ion-button class="submit-btn" full type="submit" [disabled]="!loginForm.form.valid">Login</button>
-      </ion-col>
-    </ion-row>
-  </form>
-  <button ion-button (click)="dismiss()">Annullér</button>
+  <div class="login-form">
+    <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
+      <ion-row>
+        <ion-col>
+          <div *ngIf="error" class="alert alert-danger">{{errorMessage}}</div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-list class="list" no-lines>
+            <ion-item>
+              <ion-input placeholder="Email" name="username" id="loginField" type="email" required [(ngModel)]="username"
+                #email></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input placeholder="Password" name="password" id="passwordField" type="password" required [(ngModel)]="password"></ion-input>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6>
+          <button ion-button (click)="dismiss()" color="light" full>Annullér</button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button class="submit-btn" type="submit" full>Login</button> <!-- [disabled]="!loginForm.form.valid"-->
+        </ion-col>
+      </ion-row>
+    </form>
+  </div>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="action-bright">
+    <button (click)="createUser()" class="details-cta">
+      Opret bruger
+    </button>
+  </ion-toolbar>
+</ion-footer>
