--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -15,7 +15,7 @@
 
 <ion-content>
     <ion-list>
-        <ion-item *ngFor="let product of products" (click)="showDetails(product)"> 
+        <ion-item *ngFor="let product of products" text-wrap (click)="showDetails(product)"> 
           <div class="list-image" item-start>
               <img-loader class="tile-image" src="{{product.Image}}" useImg="true" spinner="false"></img-loader>
             </div>
