select persons modal

--- a/src/pages/details-mealbox/details-mealbox.html
+++ b/src/pages/details-mealbox/details-mealbox.html
@@ -26,9 +26,15 @@
 
     <div class="mealbox__bottom">
       <div class="mealbox__meta">
-        <span><ion-icon name="alert-outline" class="mealbox__meta-icon"></ion-icon>{{personsRangeAsString}} pers.</span> 
-        <span><ion-icon name="alert-outline" class="mealbox__meta-icon"></ion-icon>{{daysRangeAsString}} dage</span>
-        <span><ion-icon name="alert-outline" class="mealbox__meta-icon"></ion-icon>{{details?.Preparation}}</span>
+        <span>
+          <ion-icon name="alert-outline" class="mealbox__meta-icon"></ion-icon>{{personsRangeAsString}} pers.
+        </span>
+        <span>
+          <ion-icon name="alert-outline" class="mealbox__meta-icon"></ion-icon>{{daysRangeAsString}} dage
+        </span>
+        <span>
+          <ion-icon name="alert-outline" class="mealbox__meta-icon"></ion-icon>{{details?.Preparation}}
+        </span>
       </div>
 
       <div class="mealbox__menu">
