--- a/src/pages/mealboxes/mealboxes.html
+++ b/src/pages/mealboxes/mealboxes.html
@@ -18,9 +18,11 @@
   <div class="error" *ngIf="error">{{ errorMessage | json }}</div>
   <div class="loading" *ngIf="loading">{{ 'loadingText' | translate }}</div>
 
-  <div padding>
+  <div class="chooser">
+    <button class="aars-button" (click)="presentSelectPersonsModal(categories)">{{selectedCategory?.Name}}</button>
+
     <span *ngFor="let category of categories">
-      <button class="aars-button" [ngClass]="{ 'selected': category.Persons === selectedPersons }" ion-button small (click)="getProducts(category.Persons)">{{category.Name}}</button>
+      <button class="aars-button" [ngClass]="{ 'selected': category.Persons === selectedPersons }" ion-button small (click)="setSelectedCategory(); getProductsByPersons(category.Persons)">{{category.Name}}</button>
     </span>
   </div>
 
