--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-buttons left *ngIf="loggedIn">
+    <ion-buttons left *ngIf="isAuthenticated">
       <button ion-button (click)="logout()">Log ud</button>
     </ion-buttons>
     <ion-title>{{ 'tabTitleAccount' | translate }}</ion-title>
@@ -19,7 +19,7 @@
 
   <div *ngIf="error">{{ errorMessage | json }}</div>
 
-  <div *ngIf="loggedIn">
+  <div *ngIf="isAuthenticated">
 
     <ion-list>
       <button ion-item (click)="getSettings()">Indstillinger</button>
@@ -56,28 +56,16 @@
 
   </div>
 
-  <!-- <div>User loggedIn?: {{loggedIn}}</div>-->
+  <!-- <div>User isAuthenticated?: {{isAuthenticated}}</div>-->
 
-  <form #loginForm="ngForm" (ngSubmit)="login()" *ngIf="!loggedIn" autocomplete="off">
-    <ion-row>
-      <ion-col>
-        <ion-list inset>
-          <ion-item>
-            <ion-input placeholder="Email" name="username" id="loginField" type="email" required [(ngModel)]="username"
-              #email></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-input placeholder="Password" name="password" id="passwordField" type="password" required [(ngModel)]="password"></ion-input>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <div *ngIf="error" class="alert alert-danger">{{errorMessage}}</div>
-        <button ion-button class="submit-btn" full type="submit" [disabled]="!loginForm.form.valid">Login</button>
-      </ion-col>
-    </ion-row>
-  </form>
+  <div *ngIf="!isAuthenticated" text-center>
+    <p>[BACKGROUND-VIDEO]</p>
+    <p>[LOGO]</p>
+    <p>Log ind for at se dine leveringer, opskrifter og indstillinger</p>
+    <div>
+      <button class="btn-custom" ion-button color="primary" (click)="presentLoginModal()">Log ind</button>
+      <button class="btn-custom" ion-button color="action-bright">TODO: Opret dig som kunde</button>
+    </div>
+  </div>
 
 </ion-content>
