--- a/src/pages/modal-select-persons/modal-select-persons.html
+++ b/src/pages/modal-select-persons/modal-select-persons.html
@@ -4,9 +4,15 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<ion-header>
 
+    <ion-navbar>
+      <ion-title>Vælg personer</ion-title>
+    </ion-navbar>
+  
+  </ion-header>
+  
 <ion-content padding>
-  <h2>Vælg personer</h2>
 
   <button class="configurator__btn-circle" *ngFor="let category of categories" [ngClass]="{ 'selected': category.Persons === selectedPersons }"
     (click)="selectPersons(category.Persons)">{{category.Persons}}</button>
