--- a/src/pages/mealbox-configurator/mealbox-configurator.html
+++ b/src/pages/mealbox-configurator/mealbox-configurator.html
@@ -7,9 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-buttons left>
-      <button ion-button (click)="dismiss()">Annuller</button>
+    <!--<ion-buttons left>
+       TODO: hide this button untill navigation in modals functions correctly<button ion-button (click)="dismiss()">Annuller</button>
     </ion-buttons>
+    -->
     <ion-title>{{details?.Name}}</ion-title>
   </ion-navbar>
 
