--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,19 +14,18 @@
 
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-        Skift kodeord
-        <button ion-item>Rediger</button>    
-    </ion-item>
-  </ion-list>
+  
+  <div class="change-password" ion-item no-lines>
+    Skift kodeord
+    <button ion-button color="danger" item-end>Rediger</button>
+  </div>
 
-
-<div padding>
-  <ion-list>
-    <ion-list-header>Pushbeskeder</ion-list-header>
-    <ion-item>Push list<ion-toggle [(ngModel)]="test"></ion-toggle></ion-item>
-  </ion-list>
-</div>
+  <div>
+    <ion-list>
+      <ion-list-header>Pushbeskeder</ion-list-header>
+      <ion-item>Push list<ion-toggle [(ngModel)]="test"></ion-toggle>
+      </ion-item>
+    </ion-list>
+  </div>
 
 </ion-content>
