design for add-ons

--- a/src/pages/mealbox-configurator/mealbox-configurator.html
+++ b/src/pages/mealbox-configurator/mealbox-configurator.html
@@ -53,7 +53,7 @@
         <ion-checkbox checked="false" (ionChange)="selectAddOn(i, addon)"></ion-checkbox>
         <ion-label>
           <h2>{{addon._Type?.Name}}</h2>
-          <ion-label>{{addon._Type?.Description}}</ion-label>
+          <p>{{addon._Type?.Description}}</p>
         </ion-label>
       </ion-item>
     </ion-list>
