new modal page for order completed

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -62,6 +62,7 @@
     <p>[BACKGROUND-VIDEO]</p>
     <p>[LOGO]</p>
     <p>Log ind for at se dine leveringer, opskrifter og indstillinger</p>
+    <p>Build 0.0.5</p>
     <div>
       <button class="btn-custom" ion-button color="primary" (click)="presentLoginModal()">Log ind</button>
       <button class="btn-custom" ion-button color="action-bright">TODO: Opret dig som kunde</button>
