--- a/src/pages/modal-login/modal-login.html
+++ b/src/pages/modal-login/modal-login.html
@@ -22,7 +22,7 @@
       </ion-row>
       <ion-row>
         <ion-col col-6>
-          <button ion-button (click)="dismiss()" color="light" full>Annullér</button>
+          <a ion-button (click)="dismiss()" color="light" full>Annullér</a>
         </ion-col>
         <ion-col col-6>
           <button ion-button class="submit-btn" type="submit" full>Login</button> <!-- [disabled]="!loginForm.form.valid"-->
