--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Netop nu" tabIcon="home" tabsHideOnSubPages="true"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Kasser" tabIcon="information-circle" tabsHideOnSubPages="true"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Måltider" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Måltider" tabIcon="information-circle" tabsHideOnSubPages="true"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Ekstra" tabIcon="contacts"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Min side" tabIcon="contacts"></ion-tab>
 </ion-tabs>
