--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,6 @@
   <ion-tab [root]="tab1Root" tabTitle="Netop nu" tabIcon="star-outline" tabsHideOnSubPages="true"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Kasser" tabIcon="cube" tabsHideOnSubPages="true"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Måltider" tabIcon="information-circle-outline" tabsHideOnSubPages="true"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Ekstra" tabIcon="cube"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Ekstra" tabIcon="cube" tabsHideOnSubPages="true"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Min side" tabIcon="contacts"></ion-tab>
 </ion-tabs>
