--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -25,6 +25,22 @@
       <button ion-item (click)="getSettings()">Indstillinger</button>
     </ion-list>
 
+    <ion-list *ngIf="subscriptions">
+      <ion-item-sliding #item *ngFor="let subscription of subscriptions">
+        <ion-item class="list-item list-item--pushdown" text-wrap>
+          <div class="list-image" item-start>
+            <img-loader class="tile-image" src="{{subscription.Image}}" useImg="true" spinner="false"></img-loader>
+          </div>
+          <h2 class="list-header">{{subscription.Title}}</h2>
+          <div class="list-subtitle">{{subscription.PersonsDaysText}}</div>
+          <div class="list-subtitle" text-lowercase>{{subscription.FrequencyText}}</div>
+        </ion-item>
+        <ion-item-options side="right">
+          <button ion-button color="danger" (click)="deleteLine(subscription.Id)">Fjern</button>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
+
     <div *ngIf="lines?.length === 0" padding>
       Du har ingen bestillinger
     </div>
@@ -62,11 +78,17 @@
     <p>[BACKGROUND-VIDEO]</p>
     <p>[LOGO]</p>
     <p>Log ind for at se dine leveringer, opskrifter og indstillinger</p>
-    <p>Build 0.0.5</p>
     <div>
       <button class="btn-custom" ion-button color="primary" (click)="presentLoginModal()">Log ind</button>
       <button class="btn-custom" ion-button color="action-bright">TODO: Opret dig som kunde</button>
     </div>
+  </div>
+
+  <div padding>
+    <p>Build 0.0.5 (5)</p>
+    <p>Culture from server: {{rootData?.d.Culture}}</p>
+    <p>Device locale: {{deviceLocale}}</p>
+    <p>Device language: {{deviceLanguage}}</p>
   </div>
 
 </ion-content>
