--- a/src/pages/mealbox-configurator/mealbox-configurator.html
+++ b/src/pages/mealbox-configurator/mealbox-configurator.html
@@ -66,7 +66,7 @@
 
 
 <ion-footer>
-  <ion-toolbar color="white">
+  <ion-toolbar>
     <ion-item no-lines>
       <div class="price-label">Pris fra</div>
       <div class="price-fat"><span [innerHTML]="calculatedPrice"></span></div>
