--- a/src/pages/details-mealbox/details-mealbox.html
+++ b/src/pages/details-mealbox/details-mealbox.html
@@ -39,14 +39,19 @@
 
       <div class="mealbox__menu">
         <ion-list-header class="mealbox__menu-header">Menu</ion-list-header>
-        <!--<div class="mealbox__menu-slider">[Menuslider]</div>-->
-        <div class="mealbox__menu-list">
-          <ul>
-            <li *ngFor="let recipe of details?.Recipes; let i = index" (click)="showRecipe(recipe)">
-              <span class="mealbox__menu-index">{{i + 1}}.</span>
-              <span class="mealbox__menu-title">{{recipe.Name}}</span>
-            </li>
-          </ul>
+        <div class="mealbox__menu-list" *ngIf="details && !details?.Recipes">
+          Vi er desværre ikke helt klar med opskrifterne endnu. Kig forbi senere...
+        </div>
+        <div *ngIf="details?.Recipes">
+          <!-- TODO: <div class="mealbox__menu-slider">[Menuslider]</div>-->
+          <div class="mealbox__menu-list">
+            <ul>
+              <li *ngFor="let recipe of details?.Recipes; let i = index" (click)="showRecipe(recipe)">
+                <span class="mealbox__menu-index">{{i + 1}}.</span>
+                <span class="mealbox__menu-title">{{recipe.Name}}</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -73,7 +78,7 @@
         <div class="mealbox__description-text system-font" [innerHTML]="details?.Description"></div>
       </div>
 
-      <ion-list *ngIf="ingredients?.length > 0">
+      <ion-list *ngIf="ingredients && ingredients.length > 0">
         <ion-list-header>Indhold {{details?.WeekNumber}}</ion-list-header>
         <ion-item *ngFor="let ingredient of ingredients">
           <div class="system-font">{{ingredient.Amount}} {{ingredient.Name}}</div>
@@ -84,11 +89,11 @@
   </div>
 
   <div class="mealbox__cta">
-    <div ion-item no-lines>
+    <ion-item no-lines>
       <div>Pris fra</div>
       <div><span [innerHTML]="details?.PriceDetail.PriceFrom"></span> <span>{{details?.PriceDetail.PlatePrice}}</span></div>
       <button (click)="showConfigurator(details)" ion-button item-end small>Vælg</button>
-    </div>
+    </ion-item>
   </div>
 
 </ion-content>
