--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -45,7 +45,7 @@
 </ion-content>
 
 <ion-footer>
-	<ion-toolbar class="details-cta-bg">
+	<ion-toolbar class="toolbar--action">
 		<button (click)="order(details)" class="details-cta">Videre til bestilling</button>
 	</ion-toolbar>
 </ion-footer>
