--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -50,7 +50,7 @@
     <ion-list>
       <ion-item class="list-item">
         <div class="list-image" item-start>
-          <img-loader class="tile-image" src="{{details?.Image}}" useImg="true" spinner="false"></img-loader>
+          <img class="tile-image" src="{{details?.Image}}" />
         </div>
         <h2 class="list-header">{{details?.Name}}</h2>
         <div class="list-subtitle">{{details?.SubTitle}}</div>
