--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Aarstiderne</title>
@@ -14,6 +15,10 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <!-- Start of  Zendesk Widget script -->
+  <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=ecdab19d-5308-4531-8e35-70c68810d68e"></script>
+  <!-- End of  Zendesk Widget script -->
 
   <!--<meta http-equiv="Content-Security-Policy" content="default-src gap://ready file://* *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src https://* 'self' 'unsafe-inline' *; font-src https://*">-->
 
@@ -35,6 +40,7 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Ionic's root component and where the app will load -->
@@ -51,4 +57,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
