--- a/src/pages/chef/chef.html
+++ b/src/pages/chef/chef.html
@@ -21,7 +21,7 @@
 <div ion-list *ngIf="details">
 
   <div class="details-image">
-    <img-loader src="{{details?.Image}}" useImg="true" spinner="false"></img-loader>
+    <img src="{{details?.Image}}" />
     <h1 class="details-header">Kok</h1>
   </div>
 
