--- a/src/pages/now/now.html
+++ b/src/pages/now/now.html
@@ -23,7 +23,7 @@
       <div ion-row>
         <div ion-col align-items-stretch col-6 *ngFor="let product of products" (click)="showDetails(product)">
           <div class="tile">
-            <img class="tile-image" [src]="product.Image" />
+            <div class="tile-image"><img [src]="product.Image" /></div>
             <div class="tile-name">{{product.Name}}</div>
             <div class="tile-price">{{product.Price}}</div>
           </div>
