--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -21,9 +21,15 @@
   </div>
 
   <div>
-    <ion-list>
-      <ion-list-header>Pushbeskeder</ion-list-header>
-      <ion-item *ngFor="let group of groups">{{group|json}} Push list<ion-toggle [(ngModel)]="test"></ion-toggle></ion-item>
+    <ion-list *ngFor="let group of groups">
+      <ion-list-header>{{group?.Title}}</ion-list-header>
+      <ion-item *ngFor="let subscription of group.Subscriptions">
+          <div>{{subscription | json}} </div>
+          <h5>{{subscription.Title}}</h5>
+          <p>{{subscription.Description}} [{{subscription.Subscribed}}] [{{subscription.Type}}]</p>
+        
+        <ion-toggle [(ngModel)]="test"></ion-toggle>
+      </ion-item>
     </ion-list>
   </div>
 
