--- a/src/pages/details-mealbox/details-mealbox.html
+++ b/src/pages/details-mealbox/details-mealbox.html
@@ -81,7 +81,7 @@
       <ion-list *ngIf="ingredients && ingredients.length > 0">
         <ion-list-header>Indhold {{details?.WeekNumber}}</ion-list-header>
         <ion-item *ngFor="let ingredient of ingredients">
-          <div class="system-font">{{ingredient.Amount}} {{ingredient.Name}}</div>
+          <div class="system-font">{{ingredient.Name}}</div>
           <ion-icon name="ios-information-circle-outline" item-end (click)="showIngredientDetails(ingredient)"></ion-icon>
         </ion-item>
       </ion-list>
