--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -21,11 +21,30 @@
   </div>
 
   <div>
+    
+    <ion-list>
+      <ion-list-header>Firebase push {{firebaseToken}}</ion-list-header>
+      <ion-item text-wrap>
+        <ion-label>
+          <h5>Jeg vil gerne modtage beskeder om vores varesortiment generelt</h5>
+          <p>Mere forklaring</p>
+        </ion-label>
+        <ion-toggle [(ngModel)]="pushTopicCatalog" (click)="subscribeToPushTopic('catalog')"></ion-toggle>
+      </ion-item>
+      <ion-item text-wrap>
+        <ion-label>
+          <h5>Jeg vil gerne modtage beskeder om vores arrangementer</h5>
+          <p>Mere forklaring</p>
+        </ion-label>
+        <ion-toggle [(ngModel)]="pushTopicArrangements" (click)="subscribeToPushTopic('arrangements')"></ion-toggle>
+      </ion-item>
+        </ion-list>
+</div>
+
+  <div>
     <ion-list *ngFor="let group of groups">
-      <ion-list-header>{{group?.Title}}</ion-list-header>
-
-
-      <ion-item *ngFor="let subscription of group.Subscriptions">
+      <ion-list-header text-wrap>{{group?.Title}}</ion-list-header>
+      <ion-item text-wrap *ngFor="let subscription of group.Subscriptions">
         <ion-label>
           <h5>{{subscription.Title}}</h5>
           <p *ngIf="subscription.Description" >{{subscription.Description}}</p>
